# aoc2023

./: .gitignore  flake.nix
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/: Cargo.toml
day05/benches/: benchmark.rs
day05/src/: lib.rs  main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/src/: main.rs
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/src/: main.rs
day21/src/: main.rs
